--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,10 @@
+##
+# @file
+# @brief The .gitignore file.
+# @copyright
+#   (C) 2024 Mitsutoshi Nakano <ItSANgo@gmail.com>
+#   SPDX-License-Identifier: GPL-3.0-or-later
+
 prepared
 prepared.c
 
